usb-moded (0.60) unstable; urgency=low

  * Add dedicated charger tracking 

 -- Philippe De Swert <philippe.deswert@jollamobile.com> Fri, 10 May 2013 15:56:03 +0300

usb-moded (0.59) unstable; urgency=low

  * Do not depend on the config, but always go to developer mode in rescue mode
  * Add a dbus method to query the currently set config option

 -- Philippe De Swert <philippe.deswert@jollamobile.com> Fri, 15 Feb 2013 23:32:55 +0200

usb-moded (0.58) unstable; urgency=low

  * Fix bug with ask mode since module loading failed
  * Make sure mac is generated before kmod is initialized to be sure the random mac is used
  * Always call clean-up first when modules get switched

 -- Philippe De Swert <philippe.deswert@jollamobile.com> Fri, 01 Feb 2013 13:36:47 +0200

usb-moded (0.57) unstable; urgency=low

  * Add random mac generator so host based network tools always get the same mac

 -- Philippe De Swert <philippe.deswert@jollamobile.com> Thu, 17 Jan 2013 19:50:37 +0200

usb-moded (0.56) unstable; urgency=low

  * Fix possible compiltation issue with N900 support and android which are mutually exclusive
  * Fix g_file_storage fallback which did not work anymore with kmod
  * Warn when using dbus methods to change mode when not connected

 -- Philippe De Swert <philippe.deswert@jollamobile.com> Fri, 11 Jan 2013 18:57:58 +0200

usb-moded (0.55) unstable; urgency=low

  * Add android gadget driver support
  * Make udev default
  * Add rescue mode
  * Add softconnect support

 -- Philippe De Swert <philippe.deswert@jollamobile.com> Wed, 12 Dec 2012 22:57:42 +0200

usb-moded (0.54) unstable; urgency=low

  * Instead of spawning shells with system() use libkmod
  * Make config file optional as defaults work for most
  * Add dbus method to set network configuration

 -- Philippe De Swert <philippedeswert@gmail.com> Tue. 13 Nov 2012 18:56:23 +0300

usb-moded (0.53) unstable; urgency=low
 
  * Un-nokia to make usb_moded more generic
  * Add mtp support for buteo